# pirateplayer

./: .gitignore  LICENSE  README.md  backend.py  conf.ini  console.py  controller.py  display.py  gstreamer.py  input.py  inputmap.py  install.sh  library.py  main.py  player.py  setup.cfg  setup.py  view.py
src/pirateplayer/: __main__.py  controller.py  library.py  view.py
src/pirateplayer/utils/: confparse.py  gstreamer.py  inputmap.py
tests/pirateplayer/: test_library.py
utils/: confparse.py  gstreamer.py  inputmap.py
