[metadata]
name = pirateplayer
author = TestDotCom
version = 0.3.3
description = PiratePlayer is an offline player for Pirate Audio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TestDotCom/pirateplayer
keywords = raspberry, rpi, pirate audio, gstreamer, player
license = MIT
license_file = LICENSE

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >= 3.5
install_requires =
    rpi.gpio
    gpiozero
    spidev
    numpy
    st7789
    pillow
    mutagen
    pygobject
    pykka

[options.extras_require]
lint = 
    autopep8
release =
    twine
    wheel
test =
    pytest-xdist
    pytest-cov

[options.packages.find]
where = src

[options.package_data]
pirateplayer = assets/logo.png, assets/NotoSansMono-ExtraCondensedSemiBold.ttf

[options.entry_points]
console_scripts =
    pirateplayer = pirateplayer.__main__:main
